--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a class="nav-link" href="#powerArmor">Power Armor</a>
                 </li>
                 <li>
-                    <a class="nav-link" href="header">Back to Top</a>
+                    <a class="nav-link" href="#header">Back to Top</a>
                 </li>
                 
             </ol> 
@@ -43,7 +43,23 @@
         </iframe>
     </div>
     <div>
-        <p id="#aboutUs"></p>
+        <div class="container-fluid">
+            <div class="row" id="aboutUs">
+                <div class="col-12 w-100">
+                    <h2>About Us</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <p>We sell the best Power Armor and mods on the market.</p>
+                <p>Make sure to bring all your bottlecaps. It's not like you have a lot of other options.
+                <p>The Best Defense against Raiders, Deathclaws and any other horrible creature the Wasteland can throw your way.</p>
+                <p>What're you going to do? Build it yourself?</p>
+            </div>
+        </div>
     </div>
 
 
